--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,3 +4,11 @@ build-backend = "setuptools.build_meta"
 
 [tool.distutils.bdist_wheel]
 universal = true
+
+[project]
+name = "yt-dlp-hianime"
+version = "3.0.0"
+dependencies = [
+    "requests>=2.32.4"
+]
+requires-python = ">=3.11"
